# trans-morph

./: .gitignore  LICENSE  README.md  pyproject.toml
trans_morph/: __init__.py  cli.py  detector.py  validator.py
trans_morph/converters/: __init__.py  csv_converter.py  toml_converter.py  xml_converter.py  yaml_json.py
